# lazarus

./: .gitignore  Cargo.toml  README.md  TODO.md  todo.md
.github/workflows/: build-deb.yml
benchmarks/: PERFORMANCE_ANALYSIS.md  results.md  run.sh
docs/: RAYON_IMPLEMENTATION.md  README.md  TODO.md
docs/benchmarks/: CHAOS_TEST_RESULTS.md  results.md
scripts/: chaos_test.sh  generate_data.py  intense_test.sh
src/: main.rs
src/core/: decoder.rs  encoder.rs  mod.rs
src/io/: mod.rs
src/metadata/: mod.rs
tests/: chaos_test.rs  integration_test.rs
